Updated projects and added social links

--- a/index.html
+++ b/index.html
@@ -7,29 +7,65 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <nav>
+       <ul class="navbar">
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+         
+    </nav>
+
+    <header id="top">
         <h1>Hello, I'm Bradley Abibu</h1>
         <p>Welcome to my Portfolio website! Glad to see you here.</p>
     </header>
 
-    <section class="about">
+    <section class="about" id="about">
         <h2>About Me</h2>
         <p>I am a computer science student and a software developer.
             I started coding in the FNB App Academy 2025 </p>
     </section>
 
-    <section class="projects">
+    <section class="projects" id="projects">
         <h2>Projects</h2>
-            <ul>
-              <li>Portfolio website</li>
-              <li>Taxi App</li>  
-              <li>Company website</li>
-              <li>Church App</li>
-            </ul>
+
+        <div class="project-list">
+            <div class="project-card">
+                <h3>Portfolio Websie</h3>
+                <p>A personal website to showcase our 
+                    projects, skills and background</p>
+                    <a href="https://bradley-portfolio.netlify.app/" target="_blank">View Project</a>
+            </div>
+
+                <div class="project-card">
+                <h3>Portfolio Websie</h3>
+                <p>A personal website to showcase our 
+                    projects, skills and background</p>
+                    <a href="https://bradley-portfolio.netlify.app/" target="_blank">View Project</a>
+            </div>
+
+                <div class="project-card">
+                <h3>Portfolio Websie</h3>
+                <p>A personal website to showcase our 
+                    projects, skills and background</p>
+                    <a href="https://bradley-portfolio.netlify.app/" target="_blank">View Project</a>
+            </div>
+        </div>    
     </section>
 
     <footer>
-        <p> Contact me on +27 79 093 0954, Email: bradabibu@gmail.com</p>
+       <p>© 2025 Bradley Abibu</p>
+       <div class="social-links">
+            <a href ="https://instagram.com/bradleyabibu/" 
+            target="_blank">instagram</a>
+
+            <a href="https://github.com/BradleyTech/" 
+            target="_blank">Github</a>
+
+            <a href="https://www.linkedin.com/in/bradley-abibu-950505281/" 
+            target="_blank">Linkedin</a>
+
+            </div>
     </footer>
 </body>
 </html>
